--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
   <section id="main-contents">
     <div class="col">
       <div class="tab-group">
-        <a href="#notice">공지사항</a>
+        <a href="#notice" class="on">공지사항</a>
         <a href="#gallery">갤러리</a>
       </div>
       <!-- notice -->
-      <ul id="notice">
+      <ul id="notice" class="on">
         <li><a href="#">여기는 공지사항 텍스트...</a></li>
         <li><a href="#">여기는 공지사항 텍스트...</a></li>
         <li><a href="#">여기는 공지사항 텍스트...</a></li>
         <li><a href="#">여기는 공지사항 텍스트...</a></li>
       </ul>
       <!-- gallery -->
-      <ul id="gallery">
+      <ul id="gallery" class="">
         <li><img src="images/main-visual01.jpg" alt="1"></li>
         <li><img src="images/main-visual02.jpg" alt="2"></li>
         <li><img src="images/main-visual03.jpg" alt="3"></li>
