--- a/index.html
+++ b/index.html
@@ -90,5 +90,22 @@
     </div>
   </section>
 
+  <footer>
+    <img src="images/footer-logo.png" alt="just 쇼핑몰" class="footer-logo">
+    <p class="copy">Copyright JUST쇼핑몰</p>
+    <div class="sns">
+      <a href="#"><img src="https://via.placeholder.com/30" alt="sns1"></a>
+      <a href="#"><img src="https://via.placeholder.com/30" alt="sns1"></a>
+      <a href="#"><img src="https://via.placeholder.com/30" alt="sns1"></a>
+    </div>
+  </footer>
+
+  <!-- 팝업창 -->
+  <div class="modal">
+    <h2>팝업창 제목</h2>
+    <hr>
+    <p>여기는 팝업창 내용이 들어갑니다...</p>
+    <button id="close-btn">닫기</button>
+  </div>
 </body>
 </html>
